Add actual plugin code

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,16 @@
-# IntelliJ Platform Artifacts Repositories
-# -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
+group = com.github.firsttimeinforever.gradlerunguttericon
+version = 0.0.1
 
-pluginGroup = com.github.firsttimeinforever.gradlerunguttericon
-pluginName = gradle-run-gutter-icon
 pluginVersion = 0.0.1
-pluginSinceBuild = 202
-pluginUntilBuild = 203.*
+pluginSinceBuild = 203
+pluginUntilBuild = 211.*
+platformType = IC
+platformVersion = 2020.3.3
+platformDownloadSources = true
+platformPlugins = com.intellij.gradle, org.jetbrains.kotlin, com.intellij.java
+
+kotlinVersion=1.4.21
+
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions
 pluginVerifierIdeVersions = 2020.2.4, 2020.3.2, 2021.1
-
-platformType = IC
-platformVersion = 2020.2.4
-platformDownloadSources = true
-# Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
-# Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
-
-# Opt-out flag for bundling Kotlin standard library.
-# See https://kotlinlang.org/docs/reference/using-gradle.html#dependency-on-the-standard-library for details.
-kotlin.stdlib.default.dependency = false
