Update plugin id

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-group = com.github.firsttimeinforever.gradlerunguttericon
+group = com.github.firsttimeinforever.gradlerunguttericons
 version = 0.0.1
 
 pluginVersion = 0.0.1
