--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,6 @@
 <idea-plugin>
     <id>firsttimeinforever.gradlerunguttericons</id>
+    <name>Gradle Run Gutter Icons</name>
     <vendor email="ivmposti@gmail.com" url="https://github.com/FirstTimeInForever/gradle-run-gutter-icons">
         FirstTimeInForever
     </vendor>
