--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-pluginName = Gradle Run Gutter Icons
+# This is needed by CI to produce an artifact with a correct name
+artifactName = gradle-run-gutter-icons
 
 group = com.github.firsttimeinforever.gradlerunguttericons
 version = 0.0.1
