Update kotlin and platform version

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,15 +5,13 @@ group = com.github.firsttimeinforever.gradlerunguttericons
 version = 0.0.1
 
 pluginVersion = 0.0.1
-pluginSinceBuild = 203
-pluginUntilBuild = 211.*
+pluginSinceBuild = 231.9225.16
+pluginUntilBuild = 233.*
 platformType = IC
-platformVersion = 2020.3.3
+platformVersion = 2023.1.4
 platformDownloadSources = true
 platformPlugins = com.intellij.gradle, org.jetbrains.kotlin, com.intellij.java
 
-kotlinVersion=1.4.21
-
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions
-pluginVerifierIdeVersions = 2020.2.4, 2020.3.2, 2021.1
+pluginVerifierIdeVersions = 2023.1.4
